# warmup

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  postinst  postrm  warmup-app.schema.json  warmup-app.schema.yaml  warmup.cpp  warmup.functions.json  warmup.schema.json  warmup.schema.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  supervisord.conf
.devcontainer/smtpd/src/config/: smtpd-app.yaml  smtpd-policy.yaml  smtpd.yaml
.devcontainer/smtpd/src/hooks/eod/: default.hsl
.devcontainer/smtpd/src/hooks/queue/: predelivery.hsl
